<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="Plc_AN" Id="{cd2b667e-56d6-422c-ab59-5b92b8a35891}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL		
	AI_1_1 AT %I*: INT;// Value Potentiometer 1-1
	AI_1_2 AT %I*: INT;// Value Potentiometer 1-2	
	AI_1_3 AT %I*: INT;// Value Potentiometer 1-3
	AI_1_4 AT %I*: INT;// Value Potentiometer 1-4
	AI_1_5 AT %I*: INT;// Value Potentiometer 1-5
	
	AI_2_1 AT %I*: INT;// Value Potentiometer 2-1
	AI_2_2 AT %I*: INT;// Value Potentiometer 2-2	
	AI_2_3 AT %I*: INT;// Value Potentiometer 2-3
	AI_2_4 AT %I*: INT;// Value Potentiometer 2-4
	AI_2_5 AT %I*: INT;// Value Potentiometer 2-5
	
	AQ_1 AT %Q*: INT;// Analogausgang AQ 1
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>