<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="Plc_DIO" Id="{9f8b9e73-b170-409a-90cb-30daff2ba156}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	DI_1_1 	AT %I*: BYTE;	// Status Potentiometer 1-1
	DI_1_2 	AT %I*: BYTE;	// Status Potentiometer 1-2
	DI_1_3 	AT %I*: BYTE;	// Status Potentiometer 1-3
	DI_1_4 	AT %I*: BYTE;	// Status Potentiometer 1-4
	DI_1_5 	AT %I*: BYTE;	// Status Potentiometer 1-5
					
	DI_2_1 	AT %I*: BYTE;	// Status Potentiometer 2-1
	DI_2_2 	AT %I*: BYTE;	// Status Potentiometer 2-2
	DI_2_3 	AT %I*: BYTE;	// Status Potentiometer 2-3
	DI_2_4 	AT %I*: BYTE;	// Status Potentiometer 2-4
	DI_2_5 	AT %I*: BYTE;	// Status Potentiometer 2-5
	
	
	DQ_1 AT %QX100.0: BOOL; 		// Digitaler Ausgang 1
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>